# local_rag

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
local_rag/: main.py
