[tool.poetry]
name = "local_rag"
version = "0.1.0"
description = ""
authors = ["Tim Hildebrandt <44113468+tim-hilde@users.noreply.github.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10.6"
llama-index = "^0.12.0"
docx2txt = "^0.8"
torch = "^2.5.1"
transformers = "^4.46.3"
python-pptx = "^1.0.2"
pillow = "^11.0.0"
llama-index-llms-ollama = "^0.4.0"
chromadb = "^0.5.20"
llama-index-embeddings-huggingface = "^0.4.0"
llama-index-vector-stores-chroma = "^0.4.0"
llama-index-embeddings-ollama = "^0.4.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
notebook = "^7.2.1"
pylint = "^3.2.5"
pytest = "^7.4.2"
ruff = "^0.5.0"
debugpy = "^1.8.8"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "PD", "NPY", "SIM", "N", "C90", "D1"]
ignore = []

[tool.ruff.format]
indent-style = "tab"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
